 * Fix: All admin forms that could potentially include file upload fields now specify `multipart/form-data` where appropriate (Tim Heap)
 * Fix: REM units in Wagtailuserbar caused incorrect spacing (Vincent Audebert)
 * Fix: Explorer menu no longer scrolls with page content (Vincent Audebert)


1.4.4 (xx.xx.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
 * Fix: Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)
 * Fix: Now user can upload images / documents only into permitted collection from choosers
 * Fix: Keyboard shortcuts for save / preview on the page editor no longer incorrectly trigger the "unsaved changes" message (Jack Paine, Matt Westcott)
 * Fix: Redirects no longer fail when both a site-specific and generic redirect exist for the same URL path (Nick Smith, João Luiz Lorencetti)
 * Fix: Wagtail now checks that Group is registered with the Django admin before unregistering it (Jason Morrison)
 * Fix: Previewing inaccessible pages no longer fails with `ALLOWED_HOSTS = ['*']` (Robert Rollins)
 * Fix: The submit button 'spinner' no longer activates if the form has client-side validation errors (Jack Paine, Matt Westcott)
 * Fix: Overriding `MESSAGE_TAGS` in project settings no longer causes messages in the Wagtail admin to lose their styling (Tim Heap)


1.4.3 (04.04.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression introduced in 1.4.2 which caused Wagtail to query the database during a system check (Tim Heap)


1.4.2 (31.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Streamfields no longer break on validation error
 * Fix: Number of validation errors in each tab in the editor is now correctly reported again
 * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)