@@ -34,6 +34,7 @@ Changelog
  * Fix: All admin forms that could potentially include file upload fields now specify `multipart/form-data` where appropriate (Tim Heap)
  * Fix: REM units in Wagtailuserbar caused incorrect spacing (Vincent Audebert)
  * Fix: Explorer menu no longer scrolls with page content (Vincent Audebert)
+ * Fix: Border added around explorer menu to stop it blending in with StreamField block listing (Alex Gleason)
 
 
 1.4.4 (xx.xx.2016)
